Apply correct number-up layout in landscape proxy print
Handle Web Print of PDF with landscaped mediabox, 270 degrees rotated. 

See: 738